# hanoi-sunrise

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
agent-commands/: analyze.md  architect.md  assess-context.md  checklist.md  clarify.md  design-e2e-test.md  design.md  implement.md  perform-e2e-test.md  set-ground-rules.md  specify.md  standardize.md  taskify.md  tasks-to-ado.md  tasks-to-issues.md
agent-commands/templates-for-commands/: checklist-template.md  design-template.md  tasks-template.md  vscode-settings.json
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-architect.sh  setup-design-e2e-test.sh  setup-design.sh  setup-perform-e2e-test.sh  setup-standardize.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-architect.ps1  setup-assess-context.ps1  setup-design-e2e-test.ps1  setup-design.ps1  setup-perform-e2e-test.ps1  setup-standardize.ps1  update-agent-context.ps1
scripts/python/: check-prerequisites.py  common.py  create-new-feature.py  setup-architect.py  setup-assess-context.py  setup-design-e2e-test.py  setup-design.py  setup-perform-e2e-test.py  setup-standardize.py  update-agent-context.py
skills/bug-fixing/: SKILL.md
skills/code-refactoring/: SKILL.md
skills/langgraph-agent-creation/: README.md  SKILL.md
skills/technical-design/: SKILL.md
(+35 files in other folders)
