[project]
name = "sunrise-cli"
version = "0.3.3"
description = "Sunrise CLI, part of Hanoi Sunrise Project. A framework to develop your project with Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
sunrise = "sunrise_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunrise_cli"]

